--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,22 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Eclipse
+.settings
+.project
+
+# Maven
+target/
+
+# Dependências do Maven
+/.mvn/
+!.mvn/wrapper/maven-wrapper.jar
+
+# Diretórios temporários do Maven
+mvnw
+mvnw.cmd
+
+# Arquivos de logs
+*.log
+
